[WebRTC][GStreamer] webrtc/multi-video.html crashes https://bugs.webkit.org/show_bug.cgi?id=222792

Patch by Philippe Normand <pnormand@igalia.com> on 2021-03-09
Reviewed by Xabier Rodriguez-Calvar.

Source/WebCore:

Add safeguards preventing removal of a pad that was not yet added.

* platform/mediastream/gstreamer/GStreamerMediaStreamSource.cpp:
(webkitMediaStreamSrcAddPad):
(webkitMediaStreamSrcRemovePad):

LayoutTests:

Update expectations for webrtc/multi-video.html which is currently expected to fail.

* platform/glib/TestExpectations:
* platform/gtk/TestExpectations:

Canonical link: https://commits.webkit.org/235071@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274150 268f45cc-cd09-0410-ab3c-d52691b4dbfc